<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RoutingEditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:background="?attr/colorBg"
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:contentScrim="?attr/colorBg"
            app:collapsedTitleTextAppearance="?attr/textAppearanceTitleLargeEmphasized"
            app:collapsedTitleTextColor="?attr/colorOnSurface"
            app:expandedTitleMarginBottom="24dp"
            app:expandedTitleMarginEnd="24dp"
            app:expandedTitleMarginStart="24dp"
            app:expandedTitleMarginTop="96dp"
            app:expandedTitleTextAppearance="?attr/textAppearanceDisplaySmallEmphasized"
            app:expandedTitleTextColor="?attr/colorOnSurface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleMaxLines="3"
            app:titleCollapseMode="fade"
            app:expandedTitleGravity="center_horizontal|bottom">

            <TextView
                android:id="@+id/custom_expanded_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:maxLines="3"
                android:ellipsize="end"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnSurfaceVariant"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <com.google.android.material.appbar.MaterialToolbar
                android:theme="@style/AppThemeToolbarCircleNavigationButton"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/edit_scroll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.0dip"
            android:layout_marginBottom="16.0dip"
            android:layout_marginStart="16.0dip"
            android:layout_marginEnd="16.0dip"
            app:cardBackgroundColor="?colorCard"
            app:cardCornerRadius="28.0dip"
            app:cardElevation="0.0dip"
            app:strokeWidth="0.0dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_spacing_dp16">

                <com.google.android.material.textfield.TextInputLayout
                    app:shapeAppearance="?shapeAppearanceCornerMedium"
                    app:boxStrokeWidth="1.5dip"
                    app:boxStrokeWidthFocused="1.5dip"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub_setting_remarks">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_remarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:shapeAppearance="?shapeAppearanceCornerMedium"
                    app:boxStrokeWidth="1.5dip"
                    app:boxStrokeWidthFocused="1.5dip"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_spacing_dp16"
                    android:hint="@string/routing_settings_domain"
                    app:helperText="@string/routing_settings_tips">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_domain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLines="5" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:shapeAppearance="?shapeAppearanceCornerMedium"
                    app:boxStrokeWidth="1.5dip"
                    app:boxStrokeWidthFocused="1.5dip"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_spacing_dp16"
                    android:hint="@string/routing_settings_ip"
                    app:helperText="@string/routing_settings_tips">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_ip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLines="5" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_process"
                    app:shapeAppearance="?shapeAppearanceCornerMedium"
                    app:boxStrokeWidth="1.5dip"
                    app:boxStrokeWidthFocused="1.5dip"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_spacing_dp16"
                    android:hint="@string/routing_settings_process"
                    app:endIconContentDescription="@string/routing_settings_process"
                    app:endIconDrawable="@drawable/ic_per_apps_24dp"
                    app:endIconMode="custom"
                    app:helperText="@string/routing_settings_process_tip">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_process"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLines="5" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:shapeAppearance="?shapeAppearanceCornerMedium"
                    app:boxStrokeWidth="1.5dip"
                    app:boxStrokeWidthFocused="1.5dip"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_spacing_dp16"
                    android:hint="@string/routing_settings_port">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:shapeAppearance="?shapeAppearanceCornerMedium"
                    app:boxStrokeWidth="1.5dip"
                    app:boxStrokeWidthFocused="1.5dip"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_spacing_dp16"
                    android:hint="@string/routing_settings_protocol"
                    app:helperText="@string/routing_settings_protocol_tip">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_protocol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:shapeAppearance="?shapeAppearanceCornerMedium"
                    app:boxStrokeWidth="1.5dip"
                    app:boxStrokeWidthFocused="1.5dip"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_spacing_dp16"
                    android:hint="@string/routing_settings_network"
                    app:helperText="@string/routing_settings_network_tip">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_network"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:shapeAppearance="?shapeAppearanceCornerMedium"
                    app:boxStrokeWidth="1.5dip"
                    app:boxStrokeWidthFocused="1.5dip"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_spacing_dp16"
                    android:hint="@string/routing_settings_outbound_tag">
                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/sp_outbound_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="0"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_spacing_dp16"
                    android:layout_marginBottom="8.0dip" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="8.0dip"
                    android:paddingBottom="8.0dip">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routing_settings_locked"
                        android:textAppearance="?attr/textAppearanceBodyLarge" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        app:thumbIcon="@drawable/mtrl_ic_check"
                        android:id="@+id/chk_locked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
